frontend fixes
