# server/Api/Services/IUserService.cs
@@ -7,6 +7,7 @@ namespace Api.Services;
 public interface IUserService
 {
     Task<List<UserDto>> GetAllUsers(SieveModel sieveModel);
+    Task<UserDto> GetUserById(string userId);
     Task<UserDto> UpdateUser(UpdateUserRequestDto dto);
     Task<UserDto> DeleteUser(string userId);
 }
